# esp32-component-badge-elf-api

./: CMakeLists.txt
include/asp/: file.h
src/: audio.c  file.c
