idf_component_register(
	SRCS
		"src/audio.c"
		"src/device.c"
		"src/display.c"
		"src/err.c"
		"src/file.c"
		"src/http.c"
		"src/input.c"
		"src/led.c"
		"src/log.c"
		"src/orientation.c"
		"src/power.c"
	PRIV_INCLUDE_DIRS
		"priv_include"
	INCLUDE_DIRS
		"include"
	REQUIRES
		"badge-bsp"
		"esp_http_client"
		"esp_netif"
		"freertos"
		"pax-gfx"
)
